kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox
spec:
  selector:
    app: sandbox
  ports:
  - protocol: TCP
    port: 80
    targetPort: http-port
